--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,23 +9,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Checkout sources
+      uses: actions/checkout@v4
+
+    - name: Setup JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Make Gradle wrapper executable
+      run: chmod +x ./gradlew
 
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug --no-daemon
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
       with:
         name: PortraitCamera-APK
         path: app/build/outputs/apk/debug/*.apk
+        # if-no-files-found: error   # optional: fail job if not found
