--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,5 @@
-// build.gradle (top-level)
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21"
-    }
-}
+// root settings.gradle — include nested module
+rootProject.name = "New-portraid-app"
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+include ':PortraitCameraPro_Full:app'
+project(':PortraitCameraPro_Full:app').projectDir = file('PortraitCameraPro_Full/app')
