--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,11 @@
-name: Android CI - build & collect outputs
+name: Android CI - build & collect outputs (safe wrapper)
 
 on:
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -22,29 +23,52 @@ jobs:
       - name: Show repo root & key files
         run: |
           echo "PWD: $(pwd)"
-          echo "Top-level files:"
+          echo "Top-level files and folders:"
           ls -la
-          echo "Find build.gradle / settings.gradle / AndroidManifest.xml"
+          echo "Find build.gradle / settings.gradle / AndroidManifest.xml (maxdepth 4):"
           find . -maxdepth 4 -type f \( -name "build.gradle" -o -name "settings.gradle" -o -name "AndroidManifest.xml" \) -print || true
 
-      - name: Ensure Gradle wrapper exists (generate if missing)
+      - name: Show candidate modules (diagnostic)
         run: |
-          if [ -f "./gradlew" ]; then
-            echo "gradlew found"
+          echo "Listing directories that look like modules:"
+          find . -maxdepth 3 -type d -name "app" -o -name "*portrait*" -o -name "*camera*" -print || true
+          echo "Show PortraitCameraPro_Full contents if present:"
+          if [ -d "PortraitCameraPro_Full" ]; then ls -la PortraitCameraPro_Full || true; fi
+
+      - name: Ensure gradle wrapper files present (generate if missing)
+        run: |
+          echo "Checking for gradle wrapper files..."
+          if [ -f "./gradle/wrapper/gradle-wrapper.jar" ] && [ -x "./gradlew" ]; then
+            echo "Gradle wrapper JAR and script found."
           else
-            echo "gradlew not found, generating wrapper via system gradle"
+            echo "Gradle wrapper incomplete/missing. Installing system gradle to generate wrapper..."
             sudo apt-get update -y
             sudo apt-get install -y gradle unzip
+            # generate wrapper using a modern gradle so gradle/wrapper/gradle-wrapper.jar is created
             gradle wrapper --gradle-version 8.1.1
+            echo "Generated wrapper files:"
+            ls -la gradle || true
+            ls -la gradle/wrapper || true
+            echo "Created gradlew:"
+            ls -la ./gradlew || true
           fi
           chmod +x ./gradlew || true
 
-      - name: Run Gradle build (assembleDebug)
+      - name: Run Gradle build (safe: generate wrapper if missing)
         run: |
-          set -x
-          ./gradlew :PortraitCameraPro_Full:app:clean :PortraitCameraPro_Full:app:assembleDebug --no-daemon || true
-          # also try root assemble in case settings includes other modules
-          ./gradlew assembleDebug --no-daemon || true
+          set -euo pipefail
+          echo "=== Running build using wrapper (or generated wrapper) ==="
+          if [ -f "./gradle/wrapper/gradle-wrapper.jar" ] && [ -x "./gradlew" ]; then
+            echo "Using ./gradlew"
+            ./gradlew :PortraitCameraPro_Full:app:clean :PortraitCameraPro_Full:app:assembleDebug --no-daemon --info --stacktrace || true
+          else
+            echo "Wrapper still missing; attempting system gradle build as last resort"
+            sudo apt-get update -y
+            sudo apt-get install -y gradle unzip
+            gradle :PortraitCameraPro_Full:app:clean :PortraitCameraPro_Full:app:assembleDebug --no-daemon --info --stacktrace || true
+          fi
+          echo "Also attempting root assembleDebug (fallback)"
+          ./gradlew assembleDebug --no-daemon --info --stacktrace || true
 
       - name: Show generated artifacts (find .apk, .aab)
         run: |
@@ -55,29 +79,26 @@ jobs:
           echo "=== PortraitCameraPro_Full/app build outputs (if exist) ==="
           if [ -d "PortraitCameraPro_Full/app/build/outputs" ]; then
             ls -la PortraitCameraPro_Full/app/build/outputs || true
-            find PortraitCameraPro_Full/app/build/outputs -maxdepth 3 -type f -print || true
+            find PortraitCameraPro_Full/app/build/outputs -type f -print || true
           else
             echo "No outputs at PortraitCameraPro_Full/app/build/outputs"
           fi
-          echo "=== Any other module outputs: */build/outputs ==="
-          find . -maxdepth 3 -type d -name "build" -exec sh -c 'ls -la "{}"/outputs || true' \; || true
+          echo "=== Other module outputs: */build/outputs ==="
+          find . -maxdepth 3 -type d -name "build" -exec sh -c 'ls -la "{}/outputs" || true' \; || true
 
       - name: Zip entire outputs folder (all modules) for download
         run: |
           mkdir -p ci_artifacts
-          # copy any outputs we find into a single folder
           for d in $(find . -type d -name outputs); do
             target="ci_artifacts/$(echo $d | sed 's|^./||' | sed 's|/|_|g')"
             mkdir -p "$target"
             cp -r "$d"/* "$target/" 2>/dev/null || true
           done
-          # also include top-level build outputs if present
           if [ -d "build/outputs" ]; then
             mkdir -p ci_artifacts/root_build_outputs
             cp -r build/outputs/* ci_artifacts/root_build_outputs/ 2>/dev/null || true
           fi
-          # list what we will upload
-          echo "Contents to upload:"
+          echo "Contents to upload (ci_artifacts):"
           find ci_artifacts -type f -maxdepth 5 -print || true
           zip -r portrait_outputs.zip ci_artifacts || true
 
