Clean up build.gradle by removing comments
Removed comments and unnecessary code from build.gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
-// build.gradle (root project)
-
+// Top-level build file
 buildscript {
     repositories {
         google()
@@ -17,6 +16,3 @@ allprojects {
         mavenCentral()
     }
 }
-
-// This file intentionally has no other code.
-// Module-specific configuration lives inside each module's build.gradle file.
