--- a/PortraitCameraPro_Full/app/build.gradle
+++ b/PortraitCameraPro_Full/app/build.gradle
@@ -1,5 +1,3 @@
-// Module: PortraitCameraPro_Full/app
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
@@ -16,38 +14,15 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
-                    'proguard-rules.pro'
-        }
-        debug {
-            // Default debug settings
-        }
+        release { minifyEnabled false }
+        debug { }
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-
-    kotlinOptions {
-        jvmTarget = "17"
-    }
-
-    packagingOptions {
-        resources {
-            excludes += [
-                    'META-INF/DEPENDENCIES',
-                    'META-INF/NOTICE',
-                    'META-INF/LICENSE'
-            ]
-        }
-    }
-
-    buildFeatures {
-        viewBinding true
-    }
+    kotlinOptions { jvmTarget = "17" }
 }
 
 dependencies {
@@ -56,16 +31,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
 
-    // CameraX
     implementation "androidx.camera:camera-core:1.2.3"
     implementation "androidx.camera:camera-camera2:1.2.3"
     implementation "androidx.camera:camera-lifecycle:1.2.3"
     implementation "androidx.camera:camera-view:1.2.3"
 
-    // ML Kit Selfie Segmentation
     implementation "com.google.mlkit:segmentation-selfie:16.0.0-beta6"
 
-    // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
 }
