--- a/PortraitCameraPro_Full/app/build.gradle
+++ b/PortraitCameraPro_Full/app/build.gradle
@@ -23,6 +23,10 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions { jvmTarget = "17" }
+
+    packagingOptions {
+        resources { excludes += ['META-INF/DEPENDENCIES', 'META-INF/NOTICE', 'META-INF/LICENSE'] }
+    }
 }
 
 dependencies {
